--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,5 @@
-.game-library {
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid black;
-}
-
-
-.table {
-  max-width: 800px;
+h1 {
+  text-align: center;
 }
 
 th {
@@ -18,4 +11,37 @@ td {
   width: 200px;
 }
 
+.game-library {
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid black;
+}
 
+
+.table {
+  max-width: 800px;
+  margin: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#title {
+  max-width: 800px;
+}
+
+#genre {
+  max-width: 800px;
+}
+
+#myForm {
+  margin: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#dropDown {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
